Fixed grid layout of article container - Remove flexbox on nav and footer and just changed it to text-align center - Made the input search a display block and added a margin auto to center - Changes the width of the search box on hover

--- a/css/tm4.css
+++ b/css/tm4.css
@@ -9,14 +9,14 @@ html{
 }
 
 body{background-color: #1B1B1E;}
-/*body{background-image: url("../images/wallpaper4.jpg"); background-size: cover;}*/
+nav, footer{text-align: center; padding: 1em;}
 
-nav, footer{
+/*nav, footer{
   display: flex;
   flex-flow: column wrap;
   align-content: center;
   padding: 1em;
-}
+}*/
 
 a{text-decoration: none; color: black;}
 a:hover{color: #33ff33;}
@@ -25,21 +25,18 @@ a:hover{color: #33ff33;}
         MENU
 -------------------*/
 
-nav#main_nav{
-  top: 0;
-  background-color: red;
-}
+nav#main_nav{top: 0; background-color: red;}
+  nav input[type=image]#logo{height: 100px;}
 
-#logo{  
-  height: 100px;
-  margin-bottom: 20px;
-}
-
-input[type=text]#search{
-  border: solid green 2px;
-  padding: 5px 10px;
-  text-transform: uppercase;
-}
+  input[type=text]#search{
+    display: block;
+    margin: auto;
+    padding: 5px 10px;
+    text-transform: uppercase;
+    width: 30%;
+    transition: ease-out 0.5s;
+  }
+    input[type=text]#search:hover{width: 40%;}
   /*#light{
     position: absolute;
     border-radius: 50%;
@@ -59,53 +56,57 @@ input[type=text]#search{
 -------------------*/
 article#character_data_container{
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  /*grid-auto-rows: minmax(250px, auto);*/
   grid-gap: 1em;
   min-height: 100%;
   padding: 50px 100px;
+  text-align: center;
 }
-  article#character_data_container section{padding: 1em; grid-column: span 4; grid-auto-rows: minmax(300px, auto); display: grid;}
-    article#character_data_container section span{background-color: aqua; text-align: center;}
-    article#character_data_container section div{background-color: black;}
-
-  .test{
-    grid-column-end: span 2;
-    grid-row-start: 3;
-    background-color: white;
-    padding: 5px;
-    text-align: center;
+  article#character_data_container span{
+    padding: 0.5em; 
+    min-width: 300px;
+    border: solid white 2px; 
+    transition: 0.3s ease-in;
   }
+    article#character_data_container span:hover{border: solid green 2px;}
 
-  #ending{grid-column-start: 2}
-  #attack{grid-column-start: 6}
+  article#character_data_container section{
+    grid-column: span 2;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    background-color: red;
+  }
+    article#character_data_container section span{align-self: center;}
+    article#character_data_container section div{background-color: white; padding: 1em; margin-top: 10px;}
 
   span.character_name{
-    background-color: white;
-    grid-column-start: 4;
+    margin: 0 auto;
+    grid-column-start: 2;
     grid-column-end: span 2;
   }
 
   section.character_info{
-   
+  
   }
 
   section.character_vehicle_gif{
-    background-color: red;
+    
   }
 
   section.character_ending{
-    background-color: blue;
+  
   }
 
   section.character_special_attack{
-    background-color: tomato;
+    
   }
 /*-------------------
       FOOTER
 -------------------*/
 
 footer#sticky_footer{
-  
   background-color: tomato;
 }
   footer span{}
